0.3.2
~~~~~
o Split long command lines in the middle instead of cutting them at the end.

0.3.1
~~~~~
o Fixed the ioprio syscall detection when running on i386/x86_64
o Fixed interaction between --accumulated and --only
o Fixed column sorting with --accumulated

0.3
~~~
o -P is now fully implemented and is dynamically toggled with 'p'
o Show the I/O priority
o Added the --accumulated, --kilobytes, --time and --quiet options

0.2.1
~~~~~
o UTF-8 strings are now correctly handled

0.2
~~~

o Misconfigured terminals (TERM=xterm-color) are tolerated
o Added the --only option to only show processes or threads actually doing I/O
o Typing 'o' dynamically toggles the --only option
o Cosmetic fixes as well as minor bug fixes
o Re-organized code to import vanilla pynl80211
o Added workaround KERNBUG display in -P

0.1
~~~

o First release