@@ -1,6 +1,7 @@
 0.3.2
 ~~~~~
 o Split long command lines in the middle instead of cutting them at the end.
+o Added a heuristic to detect kernels without CONFIG_TASK_DELAY_ACCT
 
 0.3.1
 ~~~~~
